--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Website</title>
 </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Stephen Talley</h1>
     <script src="script.js"></script>
   </body>
 </html>
